// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`project-management/tasks/atlassian-cloud CreateTask when all inputs are correct should create a task 1`] = `
Ok {
  "value": Object {
    "id": "10053",
    "url": "https://api.atlassian.com/ex/jira/0cfe1fef-1394-4fc0-862b-e636007ca0e0/rest/api/3/issue/10053",
  },
}
`;

exports[`project-management/tasks/atlassian-cloud DeleteTask when all inputs are correct should delete a task 1`] = `
Ok {
  "value": undefined,
}
`;

exports[`project-management/tasks/atlassian-cloud ListTasks when all inputs are correct should read all tasks for specified project 1`] = `
Ok {
  "value": Array [
    Object {
      "assignee": undefined,
      "description": "Task description

",
      "id": "10056",
      "parent": undefined,
      "projects": Array [
        "10000",
      ],
      "title": "Test 3",
      "url": "https://api.atlassian.com/ex/jira/0cfe1fef-1394-4fc0-862b-e636007ca0e0/rest/api/3/issue/10056",
    },
    Object {
      "assignee": undefined,
      "description": "Task description

",
      "id": "10055",
      "parent": undefined,
      "projects": Array [
        "10000",
      ],
      "title": "Test 2",
      "url": "https://api.atlassian.com/ex/jira/0cfe1fef-1394-4fc0-862b-e636007ca0e0/rest/api/3/issue/10055",
    },
    Object {
      "assignee": undefined,
      "description": "Task description

",
      "id": "10054",
      "parent": undefined,
      "projects": Array [
        "10000",
      ],
      "title": "Test 1",
      "url": "https://api.atlassian.com/ex/jira/0cfe1fef-1394-4fc0-862b-e636007ca0e0/rest/api/3/issue/10054",
    },
    Object {
      "assignee": undefined,
      "description": "hello

1. w**o**rld


1. _w_**_ha_**_t_


![media](77b7e911-119a-411d-aece-7f59945b8f92)

* unordered


* list


__underlined__

~~strikethrough~~

\`code\`

\`\`\`
code block
\`\`\`

@Tomáš Mládek  mention



super[face](https://superface.ai)



> quote


---
",
      "id": "10052",
      "parent": undefined,
      "projects": Array [
        "10000",
      ],
      "title": "rich text",
      "url": "https://api.atlassian.com/ex/jira/0cfe1fef-1394-4fc0-862b-e636007ca0e0/rest/api/3/issue/10052",
    },
  ],
}
`;

exports[`project-management/tasks/atlassian-cloud ReadTask when all inputs are correct should read task specified by id 1`] = `
Ok {
  "value": Object {
    "assignee": undefined,
    "description": "Task description

",
    "id": "10057",
    "parent": undefined,
    "projects": Array [
      "10000",
    ],
    "title": "Test",
    "url": "https://api.atlassian.com/ex/jira/0cfe1fef-1394-4fc0-862b-e636007ca0e0/rest/api/3/issue/10057",
  },
}
`;

exports[`project-management/tasks/atlassian-cloud UpdateTask when all inputs are correct should update a task 1`] = `
Ok {
  "value": Object {
    "id": "10058",
  },
}
`;
